# skills-vs-subagents-notebook

./: .gitignore  README.md  notebook.ipynb  pyproject.toml  requirements.txt
docs/plans/: 2026-03-10-notebook-design.md
src/: __main__.py  benchmark.py
src/harness/: reporter.py  runner.py  token_counter.py
src/tools/: interface.py
src/tools/cli/: list_dir.py  read_file.py  wrapper.py  write_file.py
src/tools/direct/: __init__.py  tools.py
src/tools/mcp/: __init__.py  client.py
