[project]
name = "skills-vs-subagents-notebook"
version = "0.1.0"
description = "Interactive notebook: Skills vs Sub-Agents pattern analysis for AI coding assistants"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.50.0",
    "matplotlib>=3.9.0",
    "python-dotenv>=1.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
